samples/_failures_safe/1761406181_9ecbca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0998252.c: In function ‘main’:
./samples/SAFE/__tmp_f0998252.c:145:5: error: expected expression at end of input
  145 |     for (size_t i = 0; i < compressed.size &&
      |     ^~~
./samples/SAFE/__tmp_f0998252.c:145:5: error: expected declaration or statement at end of input
